# market-data-engine

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
bench/: bench_book.cpp  bench_replay.cpp
data/: README.md
docker/: Dockerfile
docs/: architecture.md  benchmarking.md  demo_script.md
include/: binlog.hpp  book.hpp  market_event.hpp  metrics.hpp  parser.hpp  replay_engine.hpp
marketdata-pages/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
marketdata-pages/.github/workflows/: ci.yml  sync-artifacts-example.yml
marketdata-pages/docs/: content-strategy.md  data-contract.md  deployment.md
marketdata-pages/public/data/latest/: bench_book.json  bench_replay.json  benchmark_summary.json  book_samples.csv  correctness_report.json  depth_snapshots.json  manifest.json  metadata.json  metrics.json  profiler_summary.json  replay_summary.txt  report.md  spread_timeseries.json  state_hash.json  summary.json  tob_timeseries.json  top_of_book.csv
marketdata-pages/public/examples/: sample-correctness.json  sample-metrics.json  sample-summary.json  sample-tob-timeseries.json
marketdata-pages/scripts/: generate-example-data.mjs  prepare-public-data.mjs  validate-artifacts.mjs
marketdata-pages/src/: App.tsx
marketdata-pages/src/components/: ArchitectureDiagram.tsx  ArtifactList.tsx  AutoReplayChart.tsx  BenchmarkTable.tsx  DepthSnapshotView.tsx  EmptyState.tsx  Hero.tsx  Layout.tsx  MetricCard.tsx  SectionCard.tsx  SpreadChart.tsx  StatusBadge.tsx
marketdata-pages/src/content/: architecture.ts  explanations.ts
marketdata-pages/src/lib/: artifactLoader.ts  autoplay.ts  format.ts  parsers.ts  schema.ts
marketdata-pages/src/routes/: Architecture.tsx  Artifacts.tsx  Correctness.tsx  Home.tsx  Performance.tsx  Replay.tsx
marketdata-pages/src/styles/: globals.css
scripts/: download_data.sh  make_flamegraph.sh  run_perf.sh  verify_data.py
src/: binlog.cpp  book.cpp  capture_main.cpp  market_event.cpp  metrics.cpp  parser.cpp  replay_engine.cpp  replay_main.cpp
tests/: test_binlog.cpp  test_book.cpp  test_parser.cpp  test_replay.cpp
